# sagemaker-samples

./: .gitignore  LICENSE  README.md
sm-training-job/byoc-mnist/: .gitignore  README.md  build_and_push.sh  jobstatus.py  launch.py  pyproject.toml
sm-training-job/byoc-mnist/container/: Dockerfile  train
sm-training-job/hello-mnist/: .gitignore  README.md  launch.py  pyproject.toml
sm-training-job/hello-mnist/src/: train.py
